--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Redirecting...</title>
-  <meta http-equiv="refresh" content="0; url=https://jedieason.github.io/Trivia">
-  <script type="text/javascript">
-    // Fallback in case the meta refresh doesn't work
-    window.location.href = "https://jedieason.github.io/Trivia";
-  </script>
+  <title>Install Trivia</title>
 </head>
 <body>
-  <p>If you are not redirected automatically, <a href="https://jedieason.github.io/Trivia">click here</a>.</p>
+  <h1>Install Trivia Web Clip</h1>
+  <p>Click the button below to install the app on your iPhone:</p>
+  <a href="profile.mobileconfig" download="Trivia.mobileconfig">
+    <button>Download Configuration Profile</button>
+  </a>
 </body>
 </html>
