--- a/index.html
+++ b/index.html
@@ -1,92 +1,179 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Install Trivia</title>
-  <style>
-    /* Reset some default styles */
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Install Trivia</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: -apple-system, BlinkMacSystemFont, "SF Pro Display", "Segoe UI", system-ui, sans-serif;
+        }
 
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f0f2f5;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      color: #333;
-    }
+        body {
+            min-height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: #f5f5f7;
+            padding: 20px;
+        }
 
-    .container {
-      background-color: #fff;
-      padding: 40px 30px;
-      border-radius: 10px;
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-      text-align: center;
-      max-width: 400px;
-      width: 90%;
-    }
+        .container {
+            background: white;
+            padding: 3.5rem;
+            border-radius: 32px;
+            box-shadow: 
+                0 4px 6px -1px rgba(0, 0, 0, 0.05),
+                0 2px 4px -1px rgba(0, 0, 0, 0.03),
+                0 20px 25px -5px rgba(0, 0, 0, 0.05),
+                0 10px 10px -5px rgba(0, 0, 0, 0.02);
+            max-width: 90%;
+            width: 480px;
+            text-align: center;
+            position: relative;
+        }
 
-    h1 {
-      font-size: 2em;
-      margin-bottom: 20px;
-      color: #4A90E2;
-    }
+        .content {
+            position: relative;
+            z-index: 1;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 400px;
+        }
 
-    p {
-      font-size: 1.1em;
-      margin-bottom: 30px;
-      color: #555;
-    }
+        .icon {
+            width: 120px;
+            height: 120px;
+            background: linear-gradient(135deg, #f8f8f8 0%, #f2f2f2 100%);
+            border-radius: 30px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            box-shadow: 
+                0 2px 4px -1px rgba(0, 0, 0, 0.06),
+                0 4px 6px -1px rgba(0, 0, 0, 0.08);
+            margin-bottom: 2.5rem;
+            position: relative;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
 
-    .download-button {
-      display: inline-block;
-      padding: 12px 25px;
-      font-size: 1em;
-      color: #fff;
-      background-color: #4A90E2;
-      border: none;
-      border-radius: 5px;
-      text-decoration: none;
-      transition: background-color 0.3s ease;
-      cursor: pointer;
-    }
+        .icon:hover {
+            transform: translateY(-2px);
+            box-shadow: 
+                0 4px 6px -1px rgba(0, 0, 0, 0.1),
+                0 6px 8px -1px rgba(0, 0, 0, 0.12);
+        }
 
-    .download-button:hover {
-      background-color: #357ABD;
-    }
+        .icon::after {
+            content: 'T';
+            font-size: 64px;
+            font-weight: 700;
+            background: linear-gradient(135deg, #666666 0%, #444444 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            letter-spacing: -0.02em;
+        }
 
-    /* Responsive adjustments */
-    @media (max-width: 480px) {
-      .container {
-        padding: 30px 20px;
-      }
+        h1 {
+            color: #333333;
+            font-size: 2rem;
+            margin-bottom: 1rem;
+            font-weight: 700;
+            letter-spacing: -0.025em;
+        }
 
-      h1 {
-        font-size: 1.5em;
-      }
+        p {
+            color: #666666;
+            line-height: 1.7;
+            margin-bottom: 2.5rem;
+            font-size: 1.1rem;
+            padding: 0 1rem;
+            max-width: 400px;
+        }
 
-      p {
-        font-size: 1em;
-      }
+        .install-button {
+            background: linear-gradient(135deg, #666666 0%, #444444 100%);
+            color: white;
+            border: none;
+            padding: 1.2rem 3rem;
+            border-radius: 30px;
+            font-size: 1.1rem;
+            font-weight: 600;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            text-decoration: none;
+            display: inline-block;
+        }
 
-      .download-button {
-        width: 100%;
-        padding: 12px 0;
-      }
-    }
-  </style>
+        .install-button:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.15),
+                       0 10px 10px -5px rgba(0, 0, 0, 0.08);
+            background: linear-gradient(135deg, #555555 0%, #333333 100%);
+        }
+
+        .background-pattern {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: linear-gradient(45deg, #f8f8f8 25%, transparent 25%),
+                        linear-gradient(-45deg, #f8f8f8 25%, transparent 25%),
+                        linear-gradient(45deg, transparent 75%, #f8f8f8 75%),
+                        linear-gradient(-45deg, transparent 75%, #f8f8f8 75%);
+            background-size: 20px 20px;
+            background-position: 0 0, 0 10px, 10px -10px, -10px 0px;
+            opacity: 0.3;
+            border-radius: 32px;
+        }
+
+        @media (max-width: 480px) {
+            .container {
+                padding: 2.5rem;
+            }
+
+            .content {
+                min-height: 350px;
+            }
+
+            h1 {
+                font-size: 1.75rem;
+            }
+
+            p {
+                font-size: 1rem;
+                padding: 0;
+            }
+
+            .icon {
+                width: 100px;
+                height: 100px;
+            }
+
+            .icon::after {
+                font-size: 50px;
+            }
+        }
+    </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Install Trivia Web Clip</h1>
-    <p>Click the button below to install the app on your iPhone:</p>
-    <a href="profile.mobileconfig" download="Trivia.mobileconfig" class="download-button">Download Configuration Profile</a>
-  </div>
+    <div class="container">
+        <div class="background-pattern"></div>
+        <div class="content">
+            <div class="icon"></div>
+            <h1>Install Trivia</h1>
+            <p>Experience the ultimate trivia challenge on your iPhone. Download now to start your journey!</p>
+            <a href="profile.mobileconfig" download="Trivia.mobileconfig" class="install-button">
+                Download Profile
+            </a>
+        </div>
+    </div>
 </body>
 </html>
